--- a/app/src/main/res/layout/activity_viewpager.xml
+++ b/app/src/main/res/layout/activity_viewpager.xml
@@ -5,7 +5,7 @@
 
 
 
-    <com.canyinghao.canblock.demo.CanRecyclerViewPager
+    <com.canyinghao.canrecyclerview.CanRecyclerViewPager
 
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
